static/s/style.css
body {
	background-color: white;
	color: black;
}

h1, h2, h3,  #footer * { 
    color: #70709f; 
    clear: left;
}

.summary {
    width: 1em !important;
}

#footer {
	background-color: #ececef; 
	border-color: #c0c0ff;
	color: inherit;
	border-top: 2px solid;
	border-bottom: 2px solid;
	margin-bottom: 0.2em;
	padding-top: 0.75ex;
	padding-bottom: 0.75ex;
	min-height: 4.7ex;
	clear: left;
}

#footer * {
  background-color: inherit;
  font-size: 92%;
}

tr, td {
	vertical-align: top;
}

.dark {
	background-color: #efefef;
}

:target {
	background-color: #FFFF66;
}

.special {
	font-size: 80%;
}
.special * {
	color: gray;
}

#log {
    border-collapse: collapse;
    width: 100%;
    border: 1px solid #efefef;
}

#log tr { border-top: 1px solid #efefef; }
#log tr.head, #log tr.dark.new { border-top-style: none; }
#log tr.dark { border-top: 1px solid #dfdfdf; }

#log td, th {
	font-family: Consolas, "Lucida Console", "Courier New", monospace;
    padding: 0.2em 0.4em;
}

#log th { border-bottom: 1px solid #C0C0C0; }

#log .nick {
    text-align: right;
    border-right: 1px solid #C0C0C0;
}

#log .time { border-left:  1px solid #efefef; }
#log .msg  { border-right: 1px solid #efefef; line-height: 1.3em; }
#log .act  { font-style: italic; }

.log-index li {
    display: inline;
}

label,input {
	display: block;
	min-width: 10em;
	float: left;
	margin-bottom: 2ex;
}

label {
	text-align: right;
	min-width: 8em;
	padding-right: 2ex;
}

br {
	clear: left;
}

/* index page */

.calendar {
    float: left;
    margin: 0.7em;
    border-collapse: collapse;
}

.calendar th,td {
    height: 1.4em;
    border: 1px solid #dfdfdf;
}

.calendar td {
    font-family: Arial,Helvetica,sans-serif;
    text-align: center;
    padding-left: 4px;
    padding-right: 4px;
}

.calendar a {
    text-decoration: none;
}

.calendar a:hover {
    text-decoration: underline;
}

/* most important channel members. This is subjective, if you have a different
 * opinion, feel free to change */
.nick_timtoady 	{ color: green; font-weight: bold; }
.nick_audreyt 	{ color: red;  font-weight: bold;}

/* above can now be done with ".nick_TimToady", etc. That is, "nick_$nick",
   after $nick has been sanitized. Case-sensitive. See WWW.pm. */

/* all "active" bots, (svnbot6, lambdabot, specbot etc.) */
.bots  {color: #FFA500; font-style: italic}

/* The rest gets dynamically allocated colors */
.nick1 { color: #00AA33; }
.nick2 { color: #AA0000; }
.nick3 { color: #005500; }
.nick4 { color: #FF0077; }
.nick5 { color: blue; }
.nick6 { color: #8B008B; }
.nick7 { color: #50507f; }
.nick8 { color: #00008B; }
.nick9 { color: #222222; }

abbr { cursor: help; }

.search_found {
	font-weight: bold;
}

#log td.msg { text-align: left !important; }


/* position: fixed; set in JS */
#filterbox {
	width: 24em;
	top: 50px;
	right: 1%;
	padding: 10px;
	background: #e0e0e0;
	border: 2px solid #b0b0b0;
}

/* Semantically, a table would be more appropriate. But we want to avoid
   table layout algorithms which are a headtrip. */
#filterbox div {
	font-family: Consolas, "Lucida Console", "Courier New", monospace;
}

/* copy stuff from main table for consistent appearance */

/* TODO nicks in #filterbox could by styled a little more:
  Copy nick colors for easy visual parsing, will need JS to copy classes
  from DOM
*/
#filterbox div.row span {
	float: left;
}
#filterbox div.row {
	clear: both;
}
#filterbox span {
    padding: 0.2em 0.4em;
}
#filterbox span.nick {
    text-align: right;
	width: 40%;
}
#filterbox span.spoken_to,
#filterbox span.spoken_to_show,
#filterbox span.spoken_to_hide
{
	font-size: 80%;
	/* adjust for smaller font (match nick size):
	   1.3em / 0.8 = 1.625em
	*/
	line-height: 1.625em;
}

#filterbox div.row a {
	text-decoration: none;
}
/* underline doesn't work great here because some nicks have underscores */
#filterbox div.row a:hover {
	color: #525266;
}

#filterbox h3,
#filterbox #filtering_off
{
	padding-top: 1.5em;
}

#filtering_off {
	clear: both;
	text-align: left;
}

tr.cont td.nick {
    visibility: hidden;
}

table.calendar a {
    font-weight:  bold;
}

.hidden {
    display: none;
}

/* stolen from * http://stackoverflow.com/questions/7464714/jquery-notification-bars-that-can-be-dismissed#7464803 */
#notify {
    position:relative;
    width:100%;
    background-color: #70709f;
    height:50px;
    color:white;
    display:none;
    font-weight: bold;
    border: 10px;
    font-size: 150%;
    text-align: center;
    padding: 5px;
    cursor: pointer;
}

